--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title> test </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+    <link rel="stylesheet" href="./style/base.css">
   </head>
   <body>
     <div class="red"> hello </div>
