--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title> test </title>
+    <title> JP GUIDE </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -558,8 +558,7 @@
     })
     </script>
     <script src="https://cdn.jsdelivr.net/npm/md5-js-tools@1.0.2/lib/md5.min.js"></script>
-    <script>
-             
+    <script> 
        const searchParams = new URLSearchParams(window.location.search);
        const password = searchParams.get('password');
 
