--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
 
 
         <div id="godzilla-map" class="map"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/FiKGQsEYEGZBoGkt8" target="_blank"> link al mapa </a></div>
+        
         <p>
           En ese edificio de podes meter por un costado, fijate estaba medio dificil encontrar la entrada cuando estuve ahi pero hay un ascensor te mandas al ultimo piso, Ahi hay un cafe y venden merch de godzilla.
           Seguramente tengan varias cosas con la nueva pelicula que salio el anio pasado. Hay un cafe tambien ahi y un ventanal que podes ver la cabeza de godzilla aveces esta cerrada pero podes salir y mirar. Mucha gente cuando estaba cerrado no salia porque pensaban que no se podia yo sali y empezo asalir todo el mundo se ve que nomas cierran por el frio
@@ -146,6 +148,7 @@
 
 
         <div id="vr-map" class="map"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/yx2gmzKhnFVhBRjt5" target="_blank"> link al mapa </a></div>
 
         <br />
 
@@ -155,9 +158,14 @@
 
         <div id="quijote-map" class="map"></div>
 
+        <div class="centered"><a href="https://maps.app.goo.gl/cP6fYYoQLxfepsJ39" target="_blank">link al mapa</a></div>
         <br />
 
         <p> Y mismo ahi enfrente tenes un Taito station para que tiene como 3 o 4 pisos de maquinitas, yo le habia encontrado la vuelta a la de los osos de arriba y saque como 15 sabers (te rajan si sacas mas de 3 por vez)</p>
+
+        <div class="large-square">
+          <img src="img/sabers.jpg">
+        </div>
 
         <div class="center-gallery">
           <img src="img/shinesquina.jpg" class="small-square">
@@ -174,11 +182,14 @@
         <br />
         <div id="book-map" class="map"></div>
 
+        <div class="centered"><a href="https://maps.app.goo.gl/DzDDgAeCqacoSrLv6" target="_blank">link al mapa</a></div>
 
         <p> Para comer entre esos lugares esta lleno de restaurantes de todo tipo nosotros por lo general ibamos siempre a esos que son medio de comida rapida japonesa (arroz, hot pots, curry etc).</p>
         <p> Cuando me juntaba con amigos de japon siempre me hacian ir a este cafe ahi (blue bottle)</p>
 
         <div id="bottle-map" class="map"></div>
+
+        <div class="centered"><a href="https://maps.app.goo.gl/jBajG9mutZYCejVm8" target="_blank">link al mapa</a></div>
 
         <p>por esa zona hay mas lugares para comer tambien.</p>
 
@@ -186,6 +197,7 @@
         <p> Esto es una Korean BBQ (Jonetsu Horumon) que estaba re bien, nunca estaba muy lleno no era caro y estaba buena la comida, ibamos bastante seguido</p>
 
         <div id="parrillita-map" class="map"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/NSQ6gWTcKchiss2k8" target="_blank">link al mapa</a></div>
 
         <p> Por esos alrededores habia casas de cambio tambien si necesitas esos solian tener bastante buenos rates </p>
         <p> Despues en shinjuku esta lleno de cosas para hacer depende de que tengas ganas hay un restaurant de robots, los fines de semana ponen una feria que venden antiguedades yo ahi compre un shogui y una rata de bronce bastante baratas </p>
@@ -218,21 +230,25 @@
         <p> El mandarake complex enorme y por ahi tambien hay book off </p>
 
         <div class="map" id="mandarake-map"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/UotZ6sNLHFZz9yzz6" target="_blank">link al mapa</a></div>
 
         <p> El super potato si no te interesan los juegos retro no va a haber mucho pero capaz que encontras cosas de FF o Kingdom hearts ahi.</p>
 
         <div class="map" id="potato-map"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/GF6WSGQNRhSYzet3A" target="_blank">link al mapa</a></div>
 
 
         <p> Para comer esta esta zona donde estaba el gundam cafe: </p>
 
         <div class="map" id="gundam-cafe"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/2gueqHfxDq16U1Ds8" target="_blank">link al mapa</a></div>
 
         <p> el gundam cafe cerro pero en esa zona hay unos restaurantes que estan buenos tambien hay (o habia) un square enix cafe </p>
 
         <p> A vos que te gustan los libros tenes que ir aca </p>
 
         <div class="map" id="book-store"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/ZjN3aoRDrVqWq2Lo9" target="_blank">link al mapa</a></div>
 
         <p> es una libreria de como 10 pisos que tiene de todo, cada piso son generos diferentes (el ultimo piso es polemico) </p>
 
@@ -257,12 +273,13 @@
         <br />
 
         <div class="map" id="gundam"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/tbTsDmsW7z5uCaqG9" target="_blank">link al mapa</a></div>
 
         <p> Ahi nomas tambien tenes donde mataron a wizardmon en digimon adventure</p>
 
         <img src="img/oda10.jpg" class="large-square">
 
-        <p> Y de ahi podes caminar un poco hasta la parte de la cosa hay como una playita y un recorido con cosas random tipo la estatua de la libertad(?)</p>
+        <p> Y de ahi podes caminar un poco hasta la parte de la cosa hay como una playita y un recorido con cosas random tipo la estatua de la libertad(?). podes ahi al rainbowbridge</p>
 
         <div class="center-gallery">
           <img src="img/coast.jpg" class="small-square">
@@ -270,6 +287,7 @@
         </div>
 
         <div class="map" id="coast-map"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/vq6L1yjdQKHgCrWUA" target="_blank">link al mapa</a></div>
       </section>
       <section id="shibuya">
         <h3> Shibuya </h3>
@@ -338,6 +356,7 @@
         <h3> Daihikaku senkoji temple</h3>
 
         <div class="map" id="temple-map"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/jJ3KePSmgw3wpfgr9" target="_blank">link al mapa</a></div>
 
         <img src="img/templeview.jpg" class="large-square">
 
@@ -361,6 +380,7 @@
         <h3> Wajaryomen Sugari </h3>
         <p> esta medio escondido pero vende excelente ramen. Esta en el centro asi que si andas por la noche hay muchos otros lugares para comer y gente tocando musica y dando vueltas</p>
         <div class="map" id="ramen"></div>
+        <div class="centered"><a href="https://maps.app.goo.gl/fZV2GRjZeDeC6BZDA" target="_blank">link al mapa</a></div>
       </section>
       <section id="imperial">
         <h3> Kyoto imperial palace</h3>
